<resources>
    <string name="app_name">Ibm_rainbowcake</string>
    <string name="list_title">Playlist</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="detail_title">Song details</string>
    <string name="no_internet">No internet available</string>
    <string name="duration_in_seconds">Duration: (in seconds)</string>
    <string name="username">Username:</string>
    <string name="email">Email:</string>
    <string name="description">Description:</string>
    <string name="type">Type:</string>
</resources>